--- a/theme/default/view/index.pug
+++ b/theme/default/view/index.pug
@@ -6,7 +6,7 @@ block content
     .wrap
       -if(parent)
         a.back(href=parent)
-          i.ic.ic-back(style="color:#333;font-size:18px;")
+          i.ic.ic-back(style="color:#53b0f6;font-size:18px;")
       a.home(href='/')= _config_('title')
       .upload-menu
         -if(writeable)
