--- a/theme/default/style/icon.less
+++ b/theme/default/style/icon.less
@@ -24,7 +24,7 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #8f8f8f;
+  color: #53b0f6;
 }
 
 .ic-folder-download:before {
