--- a/theme/default/view/partial/footer.pug
+++ b/theme/default/view/partial/footer.pug
@@ -1,7 +1,6 @@
 footer
   p
-    a(href='https://github.com/reruin/sharelist',target='_blank') GitHub
-    a(href='/manage',target='_blank')= __('manage')
+    a(href='https://efl.pd2.ink',target='_blank') EFL的blog
 -if(g_config.custom_script)
   .
     !{g_config.custom_script}
